无线 地图 连接

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,7 +12,7 @@
     "declaration": true,
     "noImplicitAny": false,
     "sourceMap": true,
-    "removeComments": true,
+    "removeComments": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     //"outFile": "../bin/astar.js",
